force-app/main/default/objects/MCTS_API_Setting__c/MCTS_API_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Marketing Cloud API Settings</description>
    <label>MCTS API Setting</label>
</CustomObject>