force-app/main/default/objects/MCTS_API_Setting__c/fields/Authentication_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Endpoint__c</fullName>
    <defaultValue>&quot;https://auth.exacttargetapis.com/v1/requestToken&quot;</defaultValue>
    <label>Authentication Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>