force-app/main/default/objects/MCTS_API_Setting__c/fields/Messaging_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Endpoint__c</fullName>
    <defaultValue>&quot;https://www.exacttargetapis.com/messaging/v1/messageDefinitionSends/key:%ID%/send&quot;</defaultValue>
    <inlineHelpText>Specify Marketing Cloud REST Messaging Endpoint.  Use text %ID% to represent the id of the Triggered Send Definition.</inlineHelpText>
    <label>Messaging Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>