force-app/main/default/objects/MCTS_API_Setting__c/fields/SMS_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SMS_Endpoint__c</fullName>
    <defaultValue>&quot;https://www.exacttargetapis.com/sms/v1/messageContact/%ID%/send&quot;</defaultValue>
    <label>SMS Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>